_generated-doc/2.7/config/quarkus-infinispan-client.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-infinispan-client_configuration]]link:#quarkus-infinispan-client_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus.infinispan-client.devservices.enabled]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.devservices.enabled[quarkus.infinispan-client.devservices.enabled]`

[.description]
--
If DevServices has been explicitly enabled or disabled. DevServices is generally enabled by default, unless there is an existing configuration present. 
 When DevServices is enabled Quarkus will attempt to automatically configure and start a database when running in Dev or Test mode and when Docker is running.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus.infinispan-client.devservices.port]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.devservices.port[quarkus.infinispan-client.devservices.port]`

[.description]
--
Optional fixed port the dev service will listen to. 
 If not defined, the port will be chosen randomly.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus.infinispan-client.devservices.shared]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.devservices.shared[quarkus.infinispan-client.devservices.shared]`

[.description]
--
Indicates if the Infinispan server managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Infinispan starts a new container. 
 The discovery uses the `quarkus-dev-service-infinispan` label. The value is configured using the `service-name` property. 
 Container sharing is only used in dev mode.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus.infinispan-client.devservices.service-name]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.devservices.service-name[quarkus.infinispan-client.devservices.service-name]`

[.description]
--
The value of the `quarkus-dev-service-infinispan` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for Infinispan looks for a container with the `quarkus-dev-service-infinispan` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise, it starts a new container with the `quarkus-dev-service-infinispan` label set to the specified value. 
 This property is used when you need multiple shared Infinispan servers.
--|string 
|`infinispan`


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus.infinispan-client.devservices.artifacts]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.devservices.artifacts[quarkus.infinispan-client.devservices.artifacts]`

[.description]
--
List of the artifacts to automatically download and add to the Infinispan server libraries. 
 For example a Maven coordinate (org.postgresql:postgresql:42.3.1) or a dependency location url. 
 If an invalid value is passed, the Infinispan server will throw an error when trying to start.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus.infinispan-client.near-cache-max-entries]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.near-cache-max-entries[quarkus.infinispan-client.near-cache-max-entries]`

[.description]
--
Sets the bounded entry count for near cache. If this value is 0 or less near cache is disabled.
--|int 
|`0`


a| [[quarkus-infinispan-client_quarkus.infinispan-client.server-list]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.server-list[quarkus.infinispan-client.server-list]`

[.description]
--
Sets the host name/port to connect to. Each one is separated by a semicolon (eg. host1:11222;host2:11222).
--|string 
|


a| [[quarkus-infinispan-client_quarkus.infinispan-client.use-schema-registration]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.use-schema-registration[quarkus.infinispan-client.use-schema-registration]`

[.description]
--
Enables or disables Protobuf generated schemas upload to the server. Set it to 'false' when you need to handle the lifecycle of the Protobuf Schemas on Server side yourself. Default is 'true'.
--|boolean 
|`true`


a| [[quarkus-infinispan-client_quarkus.infinispan-client.client-intelligence]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.client-intelligence[quarkus.infinispan-client.client-intelligence]`

[.description]
--
Sets client intelligence used by authentication Available values: ++*++ `BASIC` - Means that the client doesn't handle server topology changes and therefore will only used the list of servers supplied at configuration time. ++*++ `TOPOLOGY_AWARE` - Use this provider if you don't want the client to present any certificates to the remote TLS host. ++*++ `HASH_DISTRIBUTION_AWARE` - Like `TOPOLOGY_AWARE` but with the additional advantage that each request involving keys will be routed to the server who is the primary owner which improves performance greatly. This is the default.
--|string 
|`HASH_DISTRIBUTION_AWARE`


a| [[quarkus-infinispan-client_quarkus.infinispan-client.use-auth]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.use-auth[quarkus.infinispan-client.use-auth]`

[.description]
--
Enables or disables authentication. Set it to false when connecting to a Infinispan Server without authentication. deployments. Default is 'true'.
--|boolean 
|`true`


a| [[quarkus-infinispan-client_quarkus.infinispan-client.auth-username]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.auth-username[quarkus.infinispan-client.auth-username]`

[.description]
--
Sets user name used by authentication.
--|string 
|


a| [[quarkus-infinispan-client_quarkus.infinispan-client.auth-password]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.auth-password[quarkus.infinispan-client.auth-password]`

[.description]
--
Sets password used by authentication
--|string 
|


a| [[quarkus-infinispan-client_quarkus.infinispan-client.auth-realm]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.auth-realm[quarkus.infinispan-client.auth-realm]`

[.description]
--
Sets realm used by authentication
--|string 
|`default`


a| [[quarkus-infinispan-client_quarkus.infinispan-client.auth-server-name]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.auth-server-name[quarkus.infinispan-client.auth-server-name]`

[.description]
--
Sets server name used by authentication
--|string 
|`infinispan`


a| [[quarkus-infinispan-client_quarkus.infinispan-client.auth-client-subject]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.auth-client-subject[quarkus.infinispan-client.auth-client-subject]`

[.description]
--
Sets client subject, necessary for those SASL mechanisms which require it to access client credentials.
--|string 
|


a| [[quarkus-infinispan-client_quarkus.infinispan-client.auth-callback-handler]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.auth-callback-handler[quarkus.infinispan-client.auth-callback-handler]`

[.description]
--
Specifies a `CallbackHandler` to be used during the authentication handshake. The `Callback`s that need to be handled are specific to the chosen SASL mechanism.
--|string 
|


a| [[quarkus-infinispan-client_quarkus.infinispan-client.sasl-mechanism]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.sasl-mechanism[quarkus.infinispan-client.sasl-mechanism]`

[.description]
--
Sets SASL mechanism used by authentication. Available values: ++*++ `DIGEST-MD5` - Uses the MD5 hashing algorithm in addition to nonces to encrypt credentials. This is the default. ++*++ `EXTERNAL` - Uses client certificates to provide valid identities to Infinispan Server and enable encryption. ++*++ `PLAIN` - Sends credentials in plain text (unencrypted) over the wire in a way that is similar to HTTP BASIC authentication. You should use `PLAIN` authentication only in combination with TLS encryption.
--|string 
|`DIGEST-MD5`


a| [[quarkus-infinispan-client_quarkus.infinispan-client.trust-store]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.trust-store[quarkus.infinispan-client.trust-store]`

[.description]
--
Specifies the filename of a truststore to use to create the `SSLContext`. You also need to specify a trustStorePassword. Setting this property implicitly enables SSL/TLS.
--|string 
|


a| [[quarkus-infinispan-client_quarkus.infinispan-client.trust-store-password]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.trust-store-password[quarkus.infinispan-client.trust-store-password]`

[.description]
--
Specifies the password needed to open the truststore You also need to specify a trustStore. Setting this property implicitly enables SSL/TLS.
--|string 
|


a| [[quarkus-infinispan-client_quarkus.infinispan-client.trust-store-type]]`link:#quarkus-infinispan-client_quarkus.infinispan-client.trust-store-type[quarkus.infinispan-client.trust-store-type]`

[.description]
--
Specifies the type of the truststore, such as JKS or JCEKS. Defaults to JKS if trustStore is enabled.
--|string 
|

|===